# StockMaster

./: .gitignore  ARCHITECTURE.md  README.md  render.yaml
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py  seed.py
backend/app/admin/: __init__.py  routes.py
backend/app/admin/templates/: base.html  base_new.html  closed_trades.html  dashboard.html  login.html  logs.html  recommendations.html  recommendations_old.html  scheduler.html
backend/app/admin/templates/partials/: scheduler_history.html
backend/app/api/v1/: admin.py  auth.py  feed.py  router.py  stocks.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  metrics.py  middleware.py  security.py
backend/app/crud/: __init__.py  deals.py  users.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: auth.py  stocks.py
backend/app/services/: closed_trades.py  llm.py  recommendation_engine.py  scheduler.py
backend/app/services/scrapers/: __init__.py  corporate_actions.py  news.py  nse_block_deals.py
backend/tests/: conftest.py  test_api_routes.py  test_auth.py  test_closed_trades.py  test_llm.py  test_middleware.py  test_scraper.py  test_scrapers_extra.py  test_security.py
(+55 files in other folders)
